--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "leave-request-calendar",
-  "version": "1.0.7",
+  "version": "1.1.1",
   "private": true,
   "engines": {
     "node": ">=0.10.0"
@@ -15,11 +15,11 @@
   },
   "dependencies": {
     "@microsoft/rush-stack-compiler-3.2": "^0.3.6",
-    "@microsoft/sp-core-library": "1.8.0-plusbeta",
-    "@microsoft/sp-lodash-subset": "1.8.0-plusbeta",
-    "@microsoft/sp-office-ui-fabric-core": "1.8.0-plusbeta",
-    "@microsoft/sp-property-pane": "1.8.0-plusbeta",
-    "@microsoft/sp-webpart-base": "1.8.0-plusbeta",
+    "@microsoft/sp-core-library": "1.10.0",
+    "@microsoft/sp-lodash-subset": "1.10.0",
+    "@microsoft/sp-office-ui-fabric-core": "1.10.0",
+    "@microsoft/sp-property-pane": "1.10.0",
+    "@microsoft/sp-webpart-base": "1.10.0",
     "@pnp/pnpjs": "^1.3.0",
     "@pnp/spfx-controls-react": "1.12.0",
     "@pnp/spfx-property-controls": "1.14.1",
@@ -28,9 +28,9 @@
     "@types/globalize": "0.0.34",
     "@types/jquery": "^3.3.29",
     "@types/moment-timezone": "^0.5.12",
-    "@types/react": "16.7.22",
+    "@types/react": "16.8.8",
     "@types/react-big-calendar": "^0.20.13",
-    "@types/react-dom": "16.0.5",
+    "@types/react-dom": "16.8.3",
     "@types/webpack-env": "1.13.1",
     "@uifabric/react-hooks": "^7.6.2",
     "draft-js": "^0.10.5",
@@ -41,21 +41,22 @@
     "jquery": "^3.3.1",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.25",
-    "react": "16.7.0",
+    "react": "16.8.5",
     "react-big-calendar": "^0.20.4",
-    "react-dom": "16.7.0",
+    "react-dom": "16.8.5",
     "react-draft-wysiwyg": "^1.13.2",
-    "typescript": "^3.2.4"
+    "typescript": "^3.2.4",
+    "office-ui-fabric-react": "6.189.2"
   },
   "resolutions": {
-    "@types/react": "16.4.2"
+    "@types/react": "16.8.8"
   },
   "devDependencies": {
     "@microsoft/rush-stack-compiler-2.7": "0.4.0",
-    "@microsoft/sp-build-web": "1.8.0-plusbeta",
-    "@microsoft/sp-module-interfaces": "1.8.0-plusbeta",
-    "@microsoft/sp-tslint-rules": "1.8.0-plusbeta",
-    "@microsoft/sp-webpart-workbench": "1.8.0-plusbeta",
+    "@microsoft/sp-build-web": "1.10.0",
+    "@microsoft/sp-module-interfaces": "1.10.0",
+    "@microsoft/sp-tslint-rules": "1.10.0",
+    "@microsoft/sp-webpart-workbench": "1.10.0",
     "@types/chai": "3.4.34",
     "@types/mocha": "2.2.38",
     "@voitanos/jest-preset-spfx-react16": "^1.1.0",
@@ -67,6 +68,8 @@
     "stylelint": "^9.10.1",
     "stylelint-config-standard": "^18.2.0",
     "stylelint-scss": "^3.5.4",
-    "webpack-bundle-analyzer": "^3.1.0"
+    "webpack-bundle-analyzer": "^3.1.0",
+    "@microsoft/rush-stack-compiler-3.3": "0.3.5",
+    "gulp": "~3.9.1"
   }
 }
