--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "leave-request-calendar",
-  "version": "1.1.6",
+  "version": "1.2.4",
   "private": true,
   "engines": {
     "node": ">=0.10.0"
@@ -20,19 +20,26 @@
     "@microsoft/sp-office-ui-fabric-core": "1.10.0",
     "@microsoft/sp-property-pane": "1.10.0",
     "@microsoft/sp-webpart-base": "1.10.0",
+    "@pnp/graph": "^2.0.11",
     "@pnp/pnpjs": "^1.3.0",
+    "@pnp/polyfill-ie11": "^2.0.1-5",
+    "@pnp/sp": "^2.0.11",
     "@pnp/spfx-controls-react": "1.12.0",
     "@pnp/spfx-property-controls": "1.14.1",
+    "@types/core-js": "^2.5.4",
     "@types/draft-js": "^0.10.30",
     "@types/es6-promise": "0.0.33",
     "@types/globalize": "0.0.34",
     "@types/jquery": "^3.3.29",
     "@types/moment-timezone": "^0.5.12",
+    "@types/raf": "^3.4.0",
     "@types/react": "16.8.8",
     "@types/react-big-calendar": "^0.20.13",
     "@types/react-dom": "16.8.3",
+    "@types/regenerator-runtime": "^0.13.0",
     "@types/webpack-env": "1.13.1",
     "@uifabric/react-hooks": "^7.6.2",
+    "core-js": "^3.6.5",
     "draft-js": "^0.10.5",
     "draftjs-to-html": "^0.8.4",
     "globalize": "^1.4.2",
@@ -41,12 +48,12 @@
     "jquery": "^3.3.1",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.25",
+    "office-ui-fabric-react": "6.189.2",
     "react": "16.8.5",
     "react-big-calendar": "^0.20.4",
     "react-dom": "16.8.5",
     "react-draft-wysiwyg": "^1.13.2",
-    "typescript": "^3.2.4",
-    "office-ui-fabric-react": "6.189.2"
+    "typescript": "^3.2.4"
   },
   "resolutions": {
     "@types/react": "16.8.8"
